# streamtex-cursor

./: .cursorrules  .gitattributes  .gitignore  Dockerfile  README.md  cursor_prompt_template.md  requirements.txt
.cursor/rules/: README.mdc  env-setup.mdc  file-extension-standards.mdc
documentation/: streamtex_cheatsheet_en.md  streamtex_cheatsheet_fr.md
html_exports/bck_showcase_music/: bck_showcase_music.html
project_aiai18h/: book.py
project_aiai18h/blocks/: bck_content_aiai_all.py  bck_domains_terms_aiai.py  bck_game_your_profile.py  bck_image_break_frog_orange.py  bck_image_dog_02_practice.py  bck_image_dog_sherlock.py  bck_image_go_practice.py  bck_image_two_racoons_01.py  bck_image_welcome_back_giraffe_01.py  bck_it_computers_ai_users.py  bck_participants_round_table_aiai.py  bck_practice_course_pack_access.py  bck_session_01_course_docs.py  bck_setting_up_notebooks_aiai.py  bck_showcase_aiai_content.py  bck_showcase_glimpse_aiai.py  bck_showcase_image_recognition_mnist_intro_aiai.py  bck_showcase_text_generation.py  bck_title_bravo.py  bck_title_break.py  (+6 more)
project_html_example/: book.py  requirements.txt
streamtex/: __init__.py  container.py  grid.py  grid_old.py  image.py  image_.py  list.py  list_old.py  overlay.py  space.py  styles.py  toc.py  utils.py  write.py
streamtex_package/: pyproject.toml  requirements.txt
streamtex_package/src/streamtex/: __init__.py  cfg_default.py  streamtex_enums.py  styles.py
streamtex_package/src/streamtex/static/: default.css
template_project/: book.py  requirements.txt
utils/: export_to_pdf_cli.txt
(+26 files in other folders)
