[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamtex"
version = "0.0.14"
authors = [
 { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.41.0",
    "beautifulsoup4>=4.10.0",
    "google-api-python-client>=2.155.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nicolasguelfi/aiaistreamlit"
Issues = "https://github.com/nicolasguelfi/aiaistreamlit/issues"